name:                lifted-threads
version:             1.0
synopsis:            lifted IO operations from the threads library

description:         @lifted-threads@ exports IO operations from the base library lifted to
                     any instance of 'MonadBase' or 'MonadBaseControl'.

homepage:            https://github.com/scrive/lifted-threads

license:             BSD3
license-file:        LICENSE
author:              Scrive
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>, Jonathan Jouty <jonathan@scrive.com>
category:            Concurrency
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type:     git
  location: https://github.com/scrive/lifted-threads.git

library
  exposed-modules:     Control.Concurrent.Thread.Lifted
                     , Control.Concurrent.Thread.Group.Lifted

  build-depends:       base >=4.4 && <5
                     , threads >=0.5 && <0.6
                     , transformers-base >=0.4 && <0.5
                     , monad-control >=0.3 && <1.1

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
